<resources>
    <string name="app_name">Quick Claim</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_set"><![CDATA[<Not set>]]></string>
    <string name="select_a_vehicle">Select your Vehicle</string>
    <string name="attach_photos">Attach Photos</string>
    <string name="tell_us_more">Tell us more..</string>
    <string name="claim_now">Claim Now</string>
    <string name="new_claim">New Claim</string>
    <string name="home">Home</string>
    <string name="photo_guidelines">Important: These photos should include this features.\n\t- Clear Perspective of the Damage.\n\t- Speedometer.\n\t- Registration Plates. </string>
    <string name="add">Add</string>
</resources>
