<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_claim"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deepthasenanayake.quickclaim.ClaimActivity"
    android:orientation="vertical"
    android:weightSum="1">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingBottom="@dimen/bottom_space"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_vehicle"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtVehicle"
            android:textColor="@android:color/darker_gray"
            android:text="@string/not_set"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dividerColor"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attach_photos"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_guidelines"
            android:textStyle="normal|italic" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/thumb_list"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAttach"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tell_us_more"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txt_claim_desc" />
    </LinearLayout>
</ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/claim_now" android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLight"
        android:id="@+id/btnClaim"
        />

</android.support.design.widget.CoordinatorLayout>
